--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,24 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:id="@+id/scrollView"
     tools:context=".screens.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:padding="6dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="6dp">
 
-        <TextView
-            android:id="@+id/media_chooser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/image_chooser"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/media_chooser"
+                android:layout_width="wrap_content"
+                android:layout_height="38dp"
+                android:layout_gravity="center"
+                android:text="@string/image_chooser"
+                android:textColor="?attr/white_black_color"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <Switch
+                android:id="@+id/switch_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="16dp"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        </FrameLayout>
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_media"
@@ -29,14 +44,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
 
-            app:cardUseCompatPadding="true"
             app:cardCornerRadius="12dp"
-            app:cardElevation="3dp">
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:padding="8dp"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:padding="8dp">
 
                 <ImageButton
                     android:id="@+id/setting_media"
@@ -59,6 +74,7 @@
                     <TextView
                         style="StyleCount"
                         android:layout_width="wrap_content"
+                        android:textColor="?attr/white_black_color"
                         android:layout_height="wrap_content"
                         android:text="@string/count"
                         android:textSize="18sp" />
@@ -67,9 +83,9 @@
                         android:id="@+id/media_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/_0"
                         android:layout_marginLeft="8dp"
-                        android:textColor="@color/black"
+                        android:text="@string/_0"
+                        android:textColor="?attr/white_black_color"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -77,7 +93,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/ch"
-                        android:textColor="@color/black"
+                        android:textColor="?attr/white_black_color"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -86,17 +102,18 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/_20"
-                        android:textColor="@color/black"
+                        android:textColor="?attr/white_black_color"
                         android:textSize="16sp"
                         android:textStyle="bold" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/layout_media2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    app:layout_constraintTop_toBottomOf="@id/layout_media1"
                     android:orientation="horizontal"
+                    app:layout_constraintTop_toBottomOf="@id/layout_media1"
                     tools:ignore="MissingConstraints">
 
                     <TextView
@@ -104,6 +121,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginEnd="12dp"
                         android:text="@string/size"
+                        android:textColor="?attr/white_black_color"
                         android:textSize="18sp" />
 
                     <TextView
@@ -111,7 +129,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/_0"
-                        android:textColor="@color/black"
+                        android:textColor="?attr/white_black_color"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -119,7 +137,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/ch"
-                        android:textColor="@color/black"
+                        android:textColor="?attr/white_black_color"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -128,7 +146,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/_20"
-                        android:textColor="@color/black"
+                        android:textColor="?attr/white_black_color"
                         android:textSize="16sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -150,7 +168,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="6dp"
             android:text="@string/file_chooser"
-            android:textColor="@color/black"
+            android:textColor="?attr/white_black_color"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -158,131 +176,136 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:cardElevation="5dp"
-            app:cardPreventCornerOverlap="true"
-            app:cardUseCompatPadding="true"
-            app:cardCornerRadius="12dp">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:padding="7dp"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="5dp"
+                app:cardPreventCornerOverlap="true"
+                app:cardUseCompatPadding="true">
 
-                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                    android:id="@+id/btn_file"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="6dp"
-                    android:text="@string/add_file"
-                    app:icon="@drawable/ic_baseline_attach_file_24"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/layout_file2" />
-
-                <ImageButton
-                    android:id="@+id/setting_file"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="12dp"
-                    android:background="#00000000"
-                    android:src="@drawable/ic_baseline_settings_24"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/layout_file" />
-
-                <LinearLayout
-                    android:id="@+id/layout_file"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:ignore="MissingConstraints">
-                    <TextView
+                    android:layout_height="match_parent"
+                    android:padding="7dp">
+
+                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                        android:id="@+id/btn_file"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/count"
-                        android:textSize="18sp" />
+                        android:layout_margin="6dp"
+                        android:text="@string/add_file"
+                        android:textColor="?attr/white_black_color"
+                        app:icon="@drawable/ic_baseline_attach_file_24"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/layout_file2" />
 
-                    <TextView
-                        android:id="@+id/file_count"
+                    <ImageButton
+                        android:id="@+id/setting_file"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/_0"
-                        android:layout_marginLeft="8dp"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:layout_marginEnd="12dp"
+                        android:background="#00000000"
+                        android:src="@drawable/ic_baseline_settings_24"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/layout_file" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:id="@+id/layout_file"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/ch"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:ignore="MissingConstraints">
 
-                    <TextView
-                        android:id="@+id/file_max_count"
-                        android:layout_width="wrap_content"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/count"
+                            android:textColor="?attr/white_black_color"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/file_count"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:text="@string/_0"
+                            android:textColor="?attr/white_black_color"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/ch"
+                            android:textColor="?attr/white_black_color"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/file_max_count"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/_20"
+                            android:textColor="?attr/white_black_color"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/layout_file2"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/_20"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/layout_file2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintTop_toBottomOf="@id/layout_file"
-                    android:orientation="horizontal"
-                    tools:ignore="MissingConstraints">
+                        android:layout_marginTop="4dp"
+                        android:orientation="horizontal"
+                        app:layout_constraintTop_toBottomOf="@id/layout_file"
+                        tools:ignore="MissingConstraints">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/size"
+                            android:textColor="?attr/white_black_color"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/file_size"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:text="@string/_0"
+                            android:textColor="?attr/white_black_color"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/ch"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/file_max_size"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/_20"
+                            android:textColor="?attr/white_black_color"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/list_file"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/size"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:id="@+id/file_size"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/_0"
-                        android:layout_marginLeft="8dp"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/ch"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/file_max_size"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/_20"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/list_file"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintTop_toBottomOf="@id/btn_file" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+                        android:layout_marginTop="4dp"
+                        app:layout_constraintTop_toBottomOf="@id/btn_file" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
         </androidx.core.widget.NestedScrollView>
     </LinearLayout>
 </ScrollView>
